# CrossBuildQuickStart

./: .gitignore  BUILD  CMakeLists.txt  CODEOWNER  Makefile  README.md  WORKSPACE  main.cpp  meson.build
.github/docs/: CHANGELOG.md
.github/workflows/: bazel.yml  meson.yml
main/: CMakeLists.txt  meson.build
scripts/bazel/: build.sh  clean.sh  run.sh
scripts/cmake/: clean.sh  exec.sh
scripts/meson/: build.sh  clean.sh  exec.sh  run.sh
